# McqConverter

./: .gitignore  Cargo.toml  README.md  pack_build.sh
amctxt2gift/: Cargo.toml
amctxt2gift/src/: main.rs
gift2amctxt/: Cargo.toml
gift2amctxt/src/: main.rs
mcqconverter_core/: Cargo.toml
mcqconverter_core/src/: common.rs  errors.rs  lib.rs  macros.rs  tests.rs  text.rs  utils.rs
mcqconverter_core/src/amctxt/: amctxt.rs  answer.rs  mod.rs  parser.rs  question.rs  text.rs
mcqconverter_core/src/gift/: answer.rs  errors.rs  gift.rs  mod.rs  parser.rs  question.rs  text.rs
mcqconverter_gui/: Cargo.toml
mcqconverter_gui/src/: main.rs
resources/AMC-TXT/: base_amctxt.txt
resources/GIFT/: GIFT-examples.txt  base_gift.txt  gift_syntax.txt
