[package]
name = "gift2amctxt"
version = "0.1.0"
authors = ["SilentVoid <silentvoid13@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
mcqconverter_core = { path="../mcqconverter_core" }
