[package]
name = "mcqconverter_gui"
version = "0.1.0"
authors = ["SilentVoid <silentvoid13@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcqconverter_core = { path="../mcqconverter_core" }

[dependencies.druid]
version = "0.6.0"
features = ["im"]
